Detects collisions, prints a h1 message.

--- a/weekFour/paddle.html
+++ b/weekFour/paddle.html
@@ -31,80 +31,81 @@
       let canvas = document.getElementById("canvas");
       let ctx = canvas.getContext("2d");
 
-      // ---------------- MATCHBALL CLASS ----------------
-      class MatchBall {
-        constructor(xPosition, yPosition, radius, xSpeed, ySpeed, rSpeed, gravity = 0.5, friction = 0.99, rotationFriction = 0.99) {
-          this.xPosition = xPosition;
-          this.yPosition = yPosition;
-          this.radius = radius;
-          this.xSpeed = xSpeed;
-          this.ySpeed = ySpeed;
-          this.rSpeed = rSpeed;
-          this.gravity = gravity;
-          this.friction = friction;
-          this.rotationFriction = rotationFriction;
-        }
+// ---------------- MATCHBALL CLASS ----------------
+class MatchBall {
+  constructor(xPosition, yPosition, radius, xSpeed, ySpeed, rSpeed, gravity = 0, friction = 1, rotationFriction = 1) {
+    this.xPosition = xPosition;
+    this.yPosition = yPosition;
+    this.radius = radius;
+    this.xSpeed = xSpeed;
+    this.ySpeed = ySpeed;
+    this.rSpeed = rSpeed;
+    this.gravity = gravity;  // Control gravity directly from constructor
+    this.friction = friction;  // Control friction directly from constructor
+    this.rotationFriction = rotationFriction;  // Control rotation friction directly from constructor
+    this.rotation = 0;  // Initial rotation angle (in radians)
+  }
 
-        // Draw the MatchBall (circle outline)
-        draw() {
-          ctx.beginPath();
-          ctx.fillStyle = "blue";
-          ctx.arc(this.xPosition, this.yPosition, this.radius, 0, 2 * Math.PI);
-          ctx.fill();
-        }
+  // Draw the MatchBall (circle outline)
+  draw() {
+    ctx.beginPath();
+    ctx.fillStyle = "blue";
+    ctx.arc(this.xPosition, this.yPosition, this.radius, 0, 2 * Math.PI);
+    ctx.fill();
+  }
 
-        // Move the MatchBall and check for wall collisions
-        move() {
-          this.ySpeed += this.gravity;
-          this.xSpeed *= this.friction;
-          this.rSpeed *= this.rotationFriction;
+  // Move the MatchBall and check for wall collisions
+  move() {
+    this.ySpeed += this.gravity;  // Apply gravity
+    this.xSpeed *= this.friction;  // Apply friction to x speed
+    this.rSpeed *= this.rotationFriction;  // Apply rotation friction
 
-          this.xPosition += this.xSpeed;
-          this.yPosition += this.ySpeed;
+    this.xPosition += this.xSpeed;  // Update x position
+    this.yPosition += this.ySpeed;  // Update y position
 
-          // Bounce off bottom
-          if (this.yPosition >= canvasHeight - this.radius) {
-            this.yPosition = canvasHeight - this.radius;
-            this.ySpeed *= -(this.friction);
-            this.rSpeed *= -(this.rotationFriction); 
-          }
-
-          // Bounce off top
-          if (this.yPosition <= this.radius) {
-            this.yPosition = this.radius;
-            this.ySpeed *= -(this.friction);
-            this.rSpeed *= -(this.rotationFriction);
-          }
-
-          // Bounce off right
-          if (this.xPosition >= canvasWidth - this.radius) {
-            this.xPosition = canvasWidth - this.radius;
-            this.xSpeed *= -(this.friction);
-            this.rSpeed *= -(this.rotationFriction); 
-          }
-
-          // Bounce off left
-          if (this.xPosition <= this.radius) {
-            this.xPosition = this.radius;
-            this.xSpeed *= -(this.friction);
-            this.rSpeed *= -(this.rotationFriction); 
-          }
-
-          // Stop very slow movements
-          if (Math.abs(this.xSpeed) < 0.01) this.xSpeed = 0;
-          if (Math.abs(this.ySpeed) < 0.01) this.ySpeed = 0;
-          if (Math.abs(this.rSpeed) < 0.01) this.rSpeed = 0;
-
-          this.rotate();
-        }
-
-        // Rotate MatchBall
-        rotate(acceleration = 0) {
-          if (acceleration > 0) this.rSpeed *= 1.1;
-          else if (acceleration < 0) this.rSpeed *= 0.9;
-          this.rotation += this.rSpeed * 0.05;
-      }
+    // Bounce off bottom
+    if (this.yPosition >= canvasHeight - this.radius) {
+      this.yPosition = canvasHeight - this.radius;
+      this.ySpeed *= -(this.friction);  // Reverse speed with friction
+      this.rSpeed *= -(this.rotationFriction);  // Reverse rotation speed with friction
     }
+
+    // Bounce off top
+    if (this.yPosition <= this.radius) {
+      this.yPosition = this.radius;
+      this.ySpeed *= -(this.friction);  // Reverse speed with friction
+      this.rSpeed *= -(this.rotationFriction);  // Reverse rotation speed with friction
+    }
+
+    // Bounce off right
+    if (this.xPosition >= canvasWidth - this.radius) {
+      this.xPosition = canvasWidth - this.radius;
+      this.xSpeed *= -(this.friction);  // Reverse speed with friction
+      this.rSpeed *= -(this.rotationFriction);  // Reverse rotation speed with friction
+    }
+
+    // Bounce off left
+    if (this.xPosition <= this.radius) {
+      this.xPosition = this.radius;
+      this.xSpeed *= -(this.friction);  // Reverse speed with friction
+      this.rSpeed *= -(this.rotationFriction);  // Reverse rotation speed with friction
+    }
+
+    // Stop very slow movements
+    if (Math.abs(this.xSpeed) < 0.01) this.xSpeed = 0;
+    if (Math.abs(this.ySpeed) < 0.01) this.ySpeed = 0;
+    if (Math.abs(this.rSpeed) < 0.01) this.rSpeed = 0;
+
+    this.rotate();  // Rotate ball based on current speed
+  }
+
+  // Rotate the MatchBall
+  rotate(acceleration = 0) {
+    if (acceleration > 0) this.rSpeed *= 1.1;  // Increase rotation speed
+    else if (acceleration < 0) this.rSpeed *= 0.9;  // Decrease rotation speed
+    this.rotation += this.rSpeed * 0.05;  // Update rotation angle
+  }
+}
 
       // ---------------- PADDLEBALL CLASS ----------------
       class PaddleBall {
@@ -166,13 +167,32 @@
         window.requestAnimationFrame(repeatme);
       }
 
-      function collisionDetection() {
-        var distanceRight = Math.sqrt(Math.pow((paddleRight.xPosition + paddleRight.radius) - (ball.xPosition + ball.radius), 2) + Math.pow((paddleRight.yPosition + paddleRight.radius) - (ball.yPosition + ball.radius), 2));
-        var distanceLeft =  Math.sqrt(Math.pow((paddleLeft.xPosition + paddleLeft.radius) - (ball.xPosition + ball.radius), 2) + Math.pow((paddleLeft.yPosition + paddleLeft.radius) - (ball.yPosition + ball.radius), 2));
-        console.log(distanceRight + ", " + distanceLeft);
-        if (distanceLeft == 0) {}
-        else if (distanceRight == 0) {}
-      }
+function collisionDetection() {
+  // Calculate the distance between the ball and each paddle's center
+  var distanceRight = Math.sqrt(Math.pow((paddleRight.xPosition - ball.xPosition), 2) + Math.pow((paddleRight.yPosition - ball.yPosition), 2));
+  var distanceLeft = Math.sqrt(Math.pow((paddleLeft.xPosition - ball.xPosition), 2) + Math.pow((paddleLeft.yPosition - ball.yPosition), 2));
+
+  // Check if the distance is less than the sum of the radii
+  if (distanceLeft <= (paddleLeft.radius + ball.radius)) {
+    // Show the message for one second
+    document.getElementById('touchdown').innerText = "LEFT TOUCHES";
+    
+    // Hide the message after 1 second
+    setTimeout(() => {
+      document.getElementById('touchdown').innerText = "";
+    }, 1000);
+  }
+  else if (distanceRight <= (paddleRight.radius + ball.radius)) {
+    // Show the message for one second
+    document.getElementById('touchdown').innerText = "RIGHT TOUCHES";
+    
+    // Hide the message after 1 second
+    setTimeout(() => {
+      document.getElementById('touchdown').innerText = "";
+    }, 1000);
+  }
+}
+
 
       //keypresses with jQuery
 		  $(document.body).on('keydown', function(e) {
