--- a/weekFive/intro3D.html
+++ b/weekFive/intro3D.html
@@ -18,14 +18,25 @@
 
         // Scene creation
         var scene = new THREE.Scene();
-        // Create a sphere geometry with a detail parameter
-        const geometry = new THREE.SphereGeometry(10, 32, 16);
 
-        // Use MeshBasicMaterial (just a simple color material)
-        const material = new THREE.MeshBasicMaterial({ color: 0xffff00 });
+        // Create a sphere geometry with a detail parameter
+        const geometry = new THREE.SphereGeometry(10, 32, 32);
+
+        // Adding material to the geometry shape
+        const material = new THREE.MeshLambertMaterial({ color: 0xffff00 });
 
         // Create the mesh combining geometry and material
         var sphere = new THREE.Mesh(geometry, material);
+
+        // Adding a spotlight
+        var spotLight = new THREE.SpotLight(0xffffff);
+        spotLight.position.set(1, 15, 15);
+        spotLight.target = sphere; // Ensure the spotlight targets the sphere
+        scene.add(spotLight);
+
+        // Optionally add an ambient light to prevent dark shadows
+        var ambientLight = new THREE.AmbientLight(0x404040); // Soft white light
+        scene.add(ambientLight);
 
         // Add sphere to the scene
         scene.add(sphere);
