--- a/weekFive/intro3D.html
+++ b/weekFive/intro3D.html
@@ -57,6 +57,8 @@
             // Rotate the sphere a bit on x and y axis every frame
             sphere.rotation.x += 0.01;
             sphere.rotation.y += 0.01;
+            sphere.position.x -= 0.02;
+            sphere.position.y -= 0.01;
 
             // Render the scene from the perspective of the camera
             renderer.render(scene, camera);
