--- a/weekFive/intro3D.html
+++ b/weekFive/intro3D.html
@@ -51,6 +51,15 @@
         // Create a new Sphere instance
         const sphere = new Sphere(10, 32, 32, 0xffff00);
 
+        // Add a plane (flat surface) below the sphere
+        const planeGeometry = new THREE.PlaneGeometry(50, 20);
+        const planeMaterial = new THREE.MeshLambertMaterial({ color: 0x999999, shininess: 30 });
+        const plane = new THREE.Mesh(planeGeometry, planeMaterial);
+        plane.rotation.x = - Math.PI / 2; // Rotate plane to be horizontal
+        plane.position.y = -10; // Move it below the sphere
+        plane.receiveShadow = true; // Enable the plane to receive shadows
+        scene.add(plane);
+
         // Add sphere to the scene
         sphere.addToScene(scene);
 
@@ -58,7 +67,12 @@
         var spotLight = new THREE.SpotLight(0xffffff);
         spotLight.position.set(1, 15, 15);
         spotLight.target = sphere.mesh; // Ensure the spotlight targets the sphere
+        spotLight.castShadow = true; // Enable the spotlight to cast shadows
         scene.add(spotLight);
+
+        // Add a helper to visualize the camera's position
+        const cameraHelper = new THREE.CameraHelper(spotLight.shadow.camera);
+        scene.add(cameraHelper);
 
         // Optionally add an ambient light to prevent dark shadows
         var ambientLight = new THREE.AmbientLight(0x404040); // Soft white light
@@ -73,6 +87,8 @@
         // Create renderer and set size to full window size
         var renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.shadowMap.enabled = true; // Enable shadow mapping
+        renderer.shadowMap.type = THREE.PCFSoftShadowMap; // Use soft shadows for smoother results
         document.body.appendChild(renderer.domElement);
 
         // Animation loop function
